# GHC-survey

./: .gitignore  PITCHME.md  PITCHME.yaml  README.md  levity-polymorphism.md
Exhaustiveness-checking/: Readme.md
assets/: unboxed.sketch
ghc-8.2.1/Exhaustiveness-checking/: Readme.md
ghc-8.2.1/Exhaustiveness-checking/src/: EmptyCase.hs  PatternSynonyms-example.hs  PatternSynonyms.hs
ghc-8.2.1/levity/: NoSubKinds.md  Readme.md
ghc-8.2.1/levity/code/: AcceptConstraint.hs  EqType.hs  OpenKindProblem.hs  OpenKindProblemWithError.hs
ghc-8.6.1-8.8.1/: Readme.md
ghc-8.6.1-8.8.1/BlockArguments/: Readme.md
ghc-8.6.1-8.8.1/Source-Plugin/: Readme.md  note.md
ghc-8.6.1-8.8.1/Source-Plugin/code/: Readme.md  cabal.project
ghc-8.6.1-8.8.1/Source-Plugin/code/Example0/: A.hs  SourcePlugin.hs
ghc-8.6.1-8.8.1/Source-Plugin/code/add-decl/: AddDecl.hs  Example.hs  Readme.md  add-decl.cabal
ghc-8.6.1-8.8.1/Source-Plugin/code/basic/: BasicPlugin.hs  Example.hs  basic.cabal
ghc-8.6.1-8.8.1/Source-Plugin/code/basic-simple/: BasicPluginSimple.hs  Example.hs  basic-simple.cabal
ghc-8.6.1-8.8.1/Source-Plugin/code/count-strict-fields/: CountStrictFields.hs  count-strict-fields.cabal
ghc-8.6.1-8.8.1/Source-Plugin/code/everywhere-has-call-stack/: EverywhereHasCallStack.hs  Example.hs  everywhere-has-call-stack.cabal
ghc-8.6.1-8.8.1/Source-Plugin/code/print-type-info/: Example.hs  basic-simple.cabal
ghc-8.6.1-8.8.1/Source-Plugin/code/replace-prelude/: ReplacePrelude.hs  replace-prelude.cabal
ghc-8.6.1-8.8.1/Source-Plugin/code/use-count-strict-fields/: Example.hs  Lib.hs  use-count-strict-fields.cabal
ghc-8.6.1-8.8.1/Source-Plugin/code/use-replace-prelude/: Example.hs  Lib.hs  use-replace-prelude.cabal
ghc-8.6.1-8.8.1/Source-Plugin/code/use-trace/: Example.hs  use-trace.cabal
ghc-8.6.1-8.8.1/Valid-Hole-Fits/: Readme.md
ghc-8.6.1-8.8.1/hadrian/: Readme.md
levity/: NoSubKinds.md  Readme.md  levity-polymorphism.md  note.md
levity/code/: MagicHash.hs  OpenKindProblemWithError.hs  RejectConstraint.hs
