cabal-version:       >=1.10
name:                basic-simple
version:             0.1.0.0
build-type:          Simple

library
  build-depends:
    base >=4.12 && <4.13,
    ghc==8.6.2

  exposed-modules:
    BasicPluginSimple
    Example

  default-language: Haskell2010

  other-extensions:
    TemplateHaskell