cabal-version:       >=1.10
name:                use-count-strict-fields
version:             0.1.0.0
build-type:          Simple
-
library
  build-depends:
    base >=4.12 && <4.13,
    count-strict-fields

  exposed-modules:
    Example
    Lib

  default-language: Haskell2010

  ghc-options:
    -fplugin=CountStrictFields