cabal-version:       >=1.10
name:                use-replace-prelude
version:             0.1.0.0
build-type:          Simple

library
  build-depends:
    base >=4.12 && <4.13,
    ghc==8.6.2,
    rio,
    replace-prelude

  exposed-modules:
    Example
    Lib

  default-extensions:
    NoImplicitPrelude

  default-language: Haskell2010
  ghc-options:
    -fplugin=ReplacePrelude