cabal-version:       >=1.10
name:                use-trace
version:             0.1.0.0
build-type:          Simple

library
  build-depends:
    base >=4.12 && <4.13,
    everywhere-has-call-stack

  exposed-modules:
    Example

  default-language: Haskell2010
  ghc-options:
    -fplugin=EverywhereHasCallStack